[package]
name = "netflux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
headless_chrome = "1.0.17"
hls_m3u8 = "0.5.1"
itertools = "0.14.0"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["blocking"] }
url = "2.5.4"
futures = "0.1"
tokio = { version = "0.2", features = ["full"] }
stremio-core = { git = "https://github.com/stremio/stremio-core", rev = "3d3e1008cd73d028decaf3f7ae572edadf8a045f" }
stremio-addon-sdk = { git = "https://github.com/GrageraE/stremio-addon-sdk-rs" }
semver = "0.9.0"
clap = { version = "4.5.40", features = ["derive"] }
scraper = "0.23.1"
regress = "0.10.3"
